--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,7 @@
 
   animation-name: vert;
   animation-duration: 2s;
-  animation-timing-function: linear;
+ /* animation-timing-function: linear;*/
   animation-iteration-count: infinite;
 }
 
@@ -61,9 +61,44 @@
 }
 
 .vertbar {
-  /*background: #777;*/
+  /*background: #333;*/
   height: 10rem;
   width: 1rem;
+  
+  display: flex;
+  justify-content: center;
+  /*align-items: center;*/
+
+  transform: translate(0);
+
+  animation-name: horz;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes horz {
+  0% {
+    transform: translateX(0);
+  }
+
+  33% {
+    transform: translateX(100%); 
+  }
+
+  66% {
+    transform: translateX(-100%); 
+  }
+  
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.horzshift {
+  /*background: #777;*/
+  height: 10rem;
+  width: 5rem;
   
   display: flex;
   justify-content: center;
@@ -85,7 +120,7 @@
   }
 
   100% {
-    transform: rotateZ(720deg);
+    transform: rotateZ(360deg);
   }
 }
 
