--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@
   width: 100%;
   height: 100%;
   position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .thing {
