--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,17 @@
-.positionbox {
+.rgb_animcont {
   width: 100%;
   height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.positionbox {
+  background: #eee;
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
   position: relative;
 
   display: flex;
